--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: anmande <anmande@student.42.fr>            +#+  +:+       +#+         #
+#    By: admin <admin@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/05/03 10:36:29 by anmande           #+#    #+#              #
-#    Updated: 2022/06/03 14:32:06 by anmande          ###   ########.fr        #
+#    Updated: 2022/06/12 19:03:26 by admin            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,14 +16,20 @@ CC = gcc
 
 CFLAGS = -Wall -Wextra -Werror
 
-SRC =	ft_isalpha.c \
+SRC =	ft_memset.c \
+		ft_bzero.c \
+		ft_calloc.c \
+		ft_putchar_fd.c \
+		ft_putstr_fd.c \
+		ft_putnbr_fd.c \
+		ft_itoa.c \
+		#ft_isalpha.c \
+		ft_atoi.c \
 		ft_isdigit.c \
 		ft_isalnum.c \
 		ft_isascii.c \
 		ft_isprint.c \
 		ft_strlen.c \
-		ft_memset.c \
-		ft_bzero.c \
 		ft_memmove.c \
 		ft_memcpy.c \
 		ft_toupper.c \
@@ -34,18 +40,12 @@ SRC =	ft_isalpha.c \
 		ft_memchr.c \
 		ft_memcmp.c \
 		ft_strnstr.c \
-		ft_atoi.c \
-		ft_calloc.c \
 		ft_strdup.c \
 		ft_substr.c \
 		ft_strjoin.c \
 		ft_strtrim.c \
 		ft_split.c \
-		ft_putchar_fd.c \
-		ft_putstr_fd.c \
 		ft_putendl_fd.c \
-		ft_putnbr_fd.c \
-		ft_itoa.c \
 		ft_strmapi.c \
 		ft_striteri.c \
 		ft_strlcpy.c \
